--- a/package.json
+++ b/package.json
@@ -4,5 +4,21 @@
   "main": "index.js",
   "repository": "https://github.com/roman-ojha/grpc-node-todo-example.git",
   "author": "Roman-Ojha <razzroman98@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev:client": "nodemon --exec ts-node ./client/index.ts",
+    "dev:server": "nodemon --exec ts-node ./server/index.ts"
+  },
+  "dependencies": {
+    "@grpc/grpc-js": "^1.10.3",
+    "@grpc/proto-loader": "^0.7.10",
+    "express": "^4.18.3",
+    "typescript": "^5.4.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.29",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2"
+  }
 }
