--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
   "license": "MIT",
   "scripts": {
     "dev:client": "nodemon --exec ts-node ./client/index.ts",
-    "dev:server": "nodemon --exec ts-node ./server/index.ts"
+    "dev:server": "nodemon --exec ts-node ./server/index.ts",
+    "proto-gen": "sh proto/build.sh"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.10.3",
     "@grpc/proto-loader": "^0.7.10",
     "express": "^4.18.3",
+    "protoc-gen-ts": "^0.8.7",
     "typescript": "^5.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/google-protobuf": "^3.15.12",
     "@types/node": "^20.11.29",
+    "grpc-tools": "^1.12.4",
+    "grpc_tools_node_protoc_ts": "^5.3.3",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2"
   }
